<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/bridgeCrossingFragment"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".BridgeCrossingActivity$PlaceholderFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/students_visited_title"/>
    <EditText
        android:id="@+id/studentsVisited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:selectAllOnFocus="true"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <requestFocus/>
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crossing_title"/>
    <Button
        android:id="@+id/bridgeCrossingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/initial_crossing_title"
        style="@style/title_button"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_crossed_title"/>
    <Button
        android:id="@+id/bridgeCrossingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/date_button"/>


</LinearLayout>
